--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
 <nav>
     
+    <div class="side--nav--toggler toggle--off" onclick="sideNav(this)">
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+        <div class="line line3"></div>
+    </div>
+
     <div class="logo--area">
         <h3>nvc deals</h3>
     </div>
