--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="search--bar">
         <form method="GET">
-            <input type="search" placeholder="Search for products, brands and more"/>
+            <input type="search" placeholder="What are you looking for ?"/>
             <button type="submit"><i class="fa fa-search fa-lg"></i></button>
         </form>
     </div>
@@ -49,6 +49,14 @@
     </div>
 
 </nav>
+
+<ul id="nav--links">
+    <li><a href="javascript:void(0)">home</a></li>
+    <li><a href="javascript:void(0)">our products <i class="fa fa-caret-down"></i></a></li>
+    <li><a href="javascript:void(0)">hot offers</a></li>
+    <li><a href="javascript:void(0)">about us</a></li>
+    <li><a href="javascript:void(0)">get in touch</a></li>
+</ul>
 
 
 <script src="src/js/index.js"></script>
