--- a/index.html
+++ b/index.html
@@ -52,7 +52,25 @@
 
 <ul id="nav--links">
     <li><a href="javascript:void(0)">home</a></li>
-    <li><a href="javascript:void(0)">our products <i class="fa fa-caret-down"></i></a></li>
+    <li><a href="javascript:void(0)">our products <i class="fa fa-caret-down"></i></a>
+    <div class="nav--dropdown">
+        <div class="categories">
+            <h1>categories</h1>
+            <ul>
+                <li><a href="javascript:void(0)">Speakers & Headphones</a></li>
+                <li><a href="javascript:void(0)">Keyboards</a></li>
+                <li><a href="javascript:void(0)">Mobile covers and cases</a></li>
+                <li><a href="javascript:void(0)">Charges</a></li>
+                <li><a href="javascript:void(0)">cameras</a></li>
+                <li><a href="javascript:void(0)">powerbanks</a></li>
+            </ul>
+        </div>
+        <div class="categories--details">
+
+        </div>
+    </div>
+    
+    </li>
     <li><a href="javascript:void(0)">hot offers</a></li>
     <li><a href="javascript:void(0)">about us</a></li>
     <li><a href="javascript:void(0)">get in touch</a></li>
